@@ -1,4 +1,5 @@
 0.3.4
+Tweaked makefiles to install global external tools correctly with correct permissions.
 Added 'Find Next' to edit menu.
 Fixed changed web links.
 Fixed Find/Replace dialog blocking on first showing.
